--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
    <title>JS Quote Generator</title>
 </head>
 <body>
-   <h1>Initial Commit</h1>
+   <div class="quote-container" id="quote-container">
+      <!-- Quote -->
+      <div class="quote-text">
+         <i class="fas fa-quote-left"></i>
+         <span id="quote">To be is to think. One must become what they wish to be.</span>
+      </div>
+      <!-- Author -->
+      <div class="quote-author">
+         <span id="author">Roman</span>
+      </div>
+      <!-- Buttons -->
+      <div class="button-container">
+         <button class="twitter-button" id="twitter" title="Tweet This!">
+            <i class="fab fa-twitter"></i>
+         </button>
+         <button id="new-quote">New Quote</button>
+      </div>
+   </div>
    <script src="scripts.js"></script>
+
 </body>
 </html>
