--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
          <button id="new-quote">New Quote</button>
       </div>
    </div>
+   <script src="https://kit.fontawesome.com/1b7fca33f8.js" crossorigin="anonymous"></script>
    <script src="scripts.js"></script>
 
 </body>
