Cached the quote container, quoteText, authorText, twitterBtn, and newQuoteBtn | Checked if the author text was a null value and handled edge case to read unknown author | Checked if the quote text was longer than 50 characters and dynamically added a class to reduce the font-size | Set the textContent of the Quote and Author Text UI Elements to a random quote and author

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <!-- Quote -->
       <div class="quote-text">
          <i class="fas fa-quote-left"></i>
-         <span id="quote">To be is to think. One must become what they wish to be.</span>
+         <span id="quote"></span>
       </div>
       <!-- Author -->
       <div class="quote-author">
-         <span id="author">Roman</span>
+         <span id="author"></span>
       </div>
       <!-- Buttons -->
       <div class="button-container">
