Added a loader to our quote generator to let the user know that there are processes happening behind the scene.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
          <button id="new-quote">New Quote</button>
       </div>
    </div>
+   <!-- Loader -->
+   <div class="loader" id="loader"></div>
+   <!-- Scripts -->
    <script src="https://kit.fontawesome.com/1b7fca33f8.js" crossorigin="anonymous"></script>
    <script src="scripts.js"></script>
 
